# toolbelt

./: .gitignore  Gemini.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.agents/: AGENTS.md
.github/workflows/: ci.yml
skills/automation/n8n-workflow-packer/: SKILL.md
skills/automation/n8n-workflow-packer/scripts/: packer.js  packer.test.js
skills/automation/supabase-schema-generator/: SKILL.md
skills/automation/supabase-schema-generator/scripts/: generator.py  test_generator.py
skills/context/ai-slop-detector/: SKILL.md
skills/context/ai-slop-detector/scripts/: detector.js
skills/context/context-compactor/: SKILL.md
skills/context/context-compactor/scripts/: compactor.py  test_compactor.py
skills/devops/local-vram-orchestrator/: SKILL.md
skills/devops/smart-pr-generator/: SKILL.md
skills/devops/smart-pr-generator/scripts/: generator.js
skills/devops/unit-test-bootstrapper/: SKILL.md
skills/devops/unit-test-bootstrapper/scripts/: bootstrapper.py
skills/integration/cyber-fraud-forensics/: SKILL.md
skills/integration/schema-markup-builder/: SKILL.md
skills/integration/schema-markup-builder/scripts/: builder.py
skills/integration/structured-news-harvester/: SKILL.md
skills/integration/structured-news-harvester/scripts/: harvester.js
