[project]
name = "toolbelt"
version = "0.1.0"
description = "SRE-grade AI Agent Toolchain & Skill Harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"
pythonpath = [
    "skills/context/context-compactor/scripts",
    "skills/automation/supabase-schema-generator/scripts"
]
